2007-04-16  Geordie McBain  <geordie.mcbain@aeromech.usyd.edu.au>

	* ov-fcn-inline.cc (Fargnames): Doc fix.

2007-04-13  Geordie McBain  <geordie.mcbain@aeromech.usyd.edu.au>

	* DLD-FUNCTIONS/find.cc (Ffind): Doc fix.

2007-04-11  John W. Eaton  <jwe@octave.org>

	* Makefile.in (DOCSTRINGS): Don't echo commands.
	(doc-files): Use mv, not $(simple-move-if-change-rule).

	* data.cc (Fnot, Fuplus, Fuminus, Ftranspose, Fctranspose, Fplus,
	Fminus, Fmtimes, Fmrdivide, Fmpower, Fmldivide, Flt, Fle, Feq,
	Fge, Fgt, Fne, Ftimes, Frdivide, Fpower, Fldivide, Fand, For):
	New functions.

2007-04-09  John W. Eaton  <jwe@octave.org>

	* graphics.cc (line::line_properties::markeredgecolor,
	line::line_properties::markerfacecolor): New properties.

2007-04-06  John W. Eaton  <jwe@octave.org>

	* data.cc (F__vnorm__): New function.

	* pt-fcn-handle.cc (tree_anon_fcn_handle::param_list, 
	tree_anon_fcn_handle::cmd_list,	tree_anon_fcn_handle::ret_list,
	tree_anon_fcn_handle::sym_tab): Delete.  Remove all uses.
	(tree_anon_fcn_handle::fcn): New data member.
	(tree_anon_fcn_handle::tree_anon_fcn_handle): Initialize it.
	(tree_anon_fcn_handle::rvalue, tree_anon_fcn_handle::dup):
	Extract parameter list, return list, function body, and symbol
	table from fcn.
	(tree_anon_fcn_handle::parameter_list, tree_anon_fcn_handle::body):
	Forward request to fcn.

	* ov-usr-fcn.h (octave_user_function::local_sym_tab): Rename from
	sym_tab.  Change all uses.
	(octave_user_function::sym_tab): New function.

	* octave.cc (execute_command_line_file): 

2007-04-05  David Bateman <dbateman@free.fr>

	* DLD-FUNCTIONS/regexp.cc (Fregexprep): Correct iteration over 
	cell arrays so that the source and pattern are iterated seperately 
	in the same manner as matlab.

2007-04-05  Laurent Mazet <laurent.mazet@motorola.com>

	* mex.cc (mxArray_octave_value::get_string): Copy nel elements,
	not buflen elements.

2007-04-05  John W. Eaton  <jwe@octave.org>

	* oct-stream.cc (DO_DOUBLE_CONV): New macro.